@@ -14,7 +14,6 @@ import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.MediaType;
 
-import org.apache.commons.lang.StringUtils;
 import org.osgi.service.component.annotations.Component;
 import org.osgi.service.component.annotations.Reference;
 
@@ -49,6 +48,7 @@ import com.enonic.xp.site.SiteDescriptor;
 import com.enonic.xp.site.SiteService;
 import com.enonic.xp.site.XDataMappings;
 
+import static com.google.common.base.Strings.nullToEmpty;
 import static java.util.stream.Collectors.toList;
 
 @Path(ResourceConstants.REST_ROOT + "{content:(schema|cms/[^/]+/[^/]+/schema)}/xdata")
@@ -175,7 +175,7 @@ public final class XDataResource
     private Boolean isXDataAllowed( final XDataName xDataName, final String allowContentType, final ContentTypeName contentTypeName )
     {
 
-        if ( StringUtils.isBlank( allowContentType ) )
+        if ( nullToEmpty( allowContentType ).isBlank() )
         {
             return true;
         }
@@ -189,7 +189,7 @@ public final class XDataResource
             new ContentTypeNameWildcardResolver( this.contentTypeService );
 
         final List<String> allowContentTypes =
-            StringUtils.isNotBlank( allowContentType ) ? Collections.singletonList( allowContentType ) : new ArrayList<>();
+            nullToEmpty( allowContentType ).isBlank() ? new ArrayList<>() : Collections.singletonList( allowContentType );
 
         if ( contentTypeNameWildcardResolver.anyTypeHasWildcard( allowContentTypes ) )
         {
