@@ -1,18 +1,17 @@
 package com.enonic.xp.core.impl.export;
 
-import java.net.URL;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Objects;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.mockito.Mockito;
-
-import com.google.common.io.Resources;
 
 import com.enonic.xp.core.impl.export.writer.NodeExportPathResolver;
 import com.enonic.xp.export.ImportNodeException;
@@ -54,9 +53,9 @@ public class NodeImporterTest
         final Path nodeFileDir = Files.createDirectories( Paths.get( temporaryFolder.toFile().getPath(), "myExport", "mynode", "_" ) );
         assert nodeFileDir != null;
 
-        final byte[] nodeXmlFile = readFromFile( "node_unordered.xml" ).getBytes();
+        final String nodeXmlFile = readFromFile( "node_unordered.xml" );
 
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
 
         final NodeImportResult result = NodeImporter.create().
             nodeService( importNodeService ).
@@ -76,9 +75,9 @@ public class NodeImporterTest
         final Path nodeFileDir = Files.createDirectories( Paths.get( temporaryFolder.toFile().getPath(), "myExport", "mynode", "_" ) );
         assert nodeFileDir != null;
 
-        final byte[] nodeXmlFile = readFromFile( "node_timestamp.xml" ).getBytes();
+        final String nodeXmlFile = readFromFile( "node_timestamp.xml" );
 
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
 
         final NodeImportResult result = NodeImporter.create().
             nodeService( importNodeService ).
@@ -98,9 +97,9 @@ public class NodeImporterTest
         final Path nodeFileDir = Files.createDirectories( Paths.get( temporaryFolder.toFile().getPath(), "myExport", "mynode", "_" ) );
         assert nodeFileDir != null;
 
-        final byte[] nodeXmlFile = readFromFile( "node_with_id_1234.xml" ).getBytes();
+        final String nodeXmlFile = readFromFile( "node_with_id_1234.xml" );
 
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
 
         final NodeImportResult result = NodeImporter.create().
             nodeService( importNodeService ).
@@ -123,9 +122,9 @@ public class NodeImporterTest
         final Path nodeFileDir = Files.createDirectories( Paths.get( temporaryFolder.toFile().getPath(), "myExport", "mynode", "_" ) );
         assert nodeFileDir != null;
 
-        final byte[] nodeXmlFile = readFromFile( "node_unordered.xml" ).getBytes();
+        final String nodeXmlFile = readFromFile( "node_unordered.xml" );
 
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
 
         final NodeServiceMock importNodeService = new NodeServiceMock();
         final NodeImportResult result = NodeImporter.create().
@@ -419,11 +418,11 @@ public class NodeImporterTest
         final Path nodeFileDir = Files.createDirectories( Paths.get( temporaryFolder.toFile().getPath(), "myExport", "mynode", "_" ) );
         final Path xsltFilePath = nodeFileDir.resolve( "transform.xsl" );
 
-        final byte[] nodeXmlFile = readFromFile( "node_with_appref.xml" ).getBytes();
-        final byte[] xsltFile = readFromFile( "transform.xsl" ).getBytes();
+        final String nodeXmlFile = readFromFile( "node_with_appref.xml" );
+        final String xsltFile = readFromFile( "transform.xsl" );
 
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
-        Files.write( xsltFilePath, xsltFile );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ), nodeXmlFile );
+        Files.writeString( xsltFilePath, xsltFile );
 
         final NodeImportResult result = NodeImporter.create().
             nodeService( importNodeService ).
@@ -457,7 +456,7 @@ public class NodeImporterTest
         }
 
         assert nodeFileDir != null;
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.ORDER_EXPORT_NAME ), builder.toString().getBytes() );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.ORDER_EXPORT_NAME ), builder.toString() );
     }
 
     private void createBinaryFile( final Path exportPath, final String fileName, final byte[] bytes )
@@ -478,8 +477,8 @@ public class NodeImporterTest
             Paths.get( temporaryFolder.toFile().getPath(), exportPath.toString(), NodeExportPathResolver.SYSTEM_FOLDER_NAME ) );
 
         assert nodeFileDir != null;
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
-                     readFromFile( "root-node.xml" ).getBytes() );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
+                           readFromFile( "root-node.xml" ) );
     }
 
     private void createNodeXmlFile( final Path exportPath, boolean ordered )
@@ -489,8 +488,8 @@ public class NodeImporterTest
             Paths.get( temporaryFolder.toFile().getPath(), exportPath.toString(), NodeExportPathResolver.SYSTEM_FOLDER_NAME ) );
 
         assert nodeFileDir != null;
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
-                     readFromFile( ordered ? "node_manual_ordered.xml" : "node_unordered.xml" ).getBytes() );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
+                           readFromFile( ordered ? "node_manual_ordered.xml" : "node_unordered.xml" ) );
     }
 
     private void createNodeXmlFileWithBinaries( final Path path )
@@ -500,8 +499,8 @@ public class NodeImporterTest
             Paths.get( temporaryFolder.toFile().getPath(), path.toString(), NodeExportPathResolver.SYSTEM_FOLDER_NAME ) );
 
         assert nodeFileDir != null;
-        Files.write( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
-                     readFromFile( "node_with_binary.xml" ).getBytes() );
+        Files.writeString( Paths.get( nodeFileDir.toString(), NodeExportPathResolver.NODE_XML_EXPORT_NAME ),
+                           readFromFile( "node_with_binary.xml" ) );
     }
 
 
@@ -515,14 +514,11 @@ public class NodeImporterTest
     final String readFromFile( final String fileName )
         throws Exception
     {
-        final URL url = getClass().getResource( fileName );
-        if ( url == null )
+        final InputStream stream =
+            Objects.requireNonNull( getClass().getResourceAsStream( fileName ), "Resource file [" + fileName + "] not found" );
+        try (stream)
         {
-            throw new IllegalArgumentException( "Resource file [" + fileName + "] not found" );
+            return new String( stream.readAllBytes(), StandardCharsets.UTF_8 );
         }
-
-        return Resources.toString( url, StandardCharsets.UTF_8 );
-
     }
-
 }
