@@ -1,17 +1,14 @@
 package com.enonic.xp.repo.impl.dump.upgrade;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.stream.Collectors;
 
-import org.apache.commons.io.FileUtils;
-
 import com.google.common.io.ByteSource;
 import com.google.common.io.CharSource;
-import com.google.common.io.Files;
 
 import com.enonic.xp.blob.BlobKey;
 import com.enonic.xp.blob.Segment;
@@ -22,6 +19,7 @@ import com.enonic.xp.dump.SystemDumpResult;
 import com.enonic.xp.node.NodeId;
 import com.enonic.xp.node.NodeVersion;
 import com.enonic.xp.repo.impl.dump.DumpBlobRecord;
+import com.enonic.xp.repo.impl.dump.FileUtils;
 import com.enonic.xp.repo.impl.dump.model.DumpMeta;
 import com.enonic.xp.repo.impl.dump.serializer.json.DumpMetaJsonSerializer;
 import com.enonic.xp.repo.impl.dump.upgrade.obsoletemodel.pre5.Pre5ContentConstants;
@@ -51,6 +49,8 @@ public class RepositoryIdDumpUpgrader
 
     private static final Segment SEGMENT =
         RepositorySegmentUtils.toSegment( ContentConstants.CONTENT_REPO_ID, NodeConstants.NODE_SEGMENT_LEVEL );
+
+    private static final NodeVersionJsonSerializer NODE_VERSION_JSON_SERIALIZER = NodeVersionJsonSerializer.create();
 
     public RepositoryIdDumpUpgrader( final Path basePath )
     {
@@ -139,11 +139,12 @@ public class RepositoryIdDumpUpgrader
 
     private void upgradeRepositoryDir()
     {
-        final File oldRepoDirectory = this.dumpReader.getRepositoryDir( OLD_REPOSITORY_ID );
+        final Path oldRepoDirectory = this.dumpReader.getRepositoryDir( OLD_REPOSITORY_ID );
 
         if ( oldRepoDirectory != null )
         {
-            final File newRepoDirectory = new File( oldRepoDirectory.getParent(), NEW_REPOSITORY_ID.toString() );
+            final Path newRepoDirectory = oldRepoDirectory.getParent().resolve( NEW_REPOSITORY_ID.toString() );
+
             try
             {
                 FileUtils.moveDirectory( oldRepoDirectory, newRepoDirectory );
@@ -164,15 +165,15 @@ public class RepositoryIdDumpUpgrader
             systemDumpResult( upgradeSystemDumpResult( sourceDumpMeta.getSystemDumpResult() ) ).
             build();
 
-        final File dumpMetaFile = dumpReader.getMetaDataFile();
+        final Path dumpMetaFile = dumpReader.getMetaDataFile();
 
         try
         {
-            Files.write( new DumpMetaJsonSerializer().serialize( upgradedDumpMeta ).getBytes(), dumpMetaFile );
+            Files.writeString( dumpMetaFile, new DumpMetaJsonSerializer().serialize( upgradedDumpMeta ) );
         }
         catch ( IOException e )
         {
-            throw new DumpUpgradeException( "Unable to upgrade dump meta file: " + dumpMetaFile.getName(), e );
+            throw new DumpUpgradeException( "Unable to upgrade dump meta file: " + dumpMetaFile.getFileName(), e );
         }
     }
 
@@ -215,7 +216,7 @@ public class RepositoryIdDumpUpgrader
     }
 
     @Override
-    protected void upgradeBranchEntries( final RepositoryId repositoryId, final Branch branch, final File entriesFile )
+    protected void upgradeBranchEntries( final RepositoryId repositoryId, final Branch branch, final Path entriesFile )
     {
         super.upgradeBranchEntries( repositoryId, branch, entriesFile );
     }
@@ -257,7 +258,7 @@ public class RepositoryIdDumpUpgrader
 
     private void writeNodeVersion( final NodeVersion nodeVersion, final DumpBlobRecord dumpBlobRecord )
     {
-        final String serializedUpgradedNodeVersion = NodeVersionJsonSerializer.create( false ).toNodeString( nodeVersion );
+        final String serializedUpgradedNodeVersion = NODE_VERSION_JSON_SERIALIZER.toNodeString( nodeVersion );
         final ByteSource byteSource = ByteSource.wrap( serializedUpgradedNodeVersion.getBytes( StandardCharsets.UTF_8 ) );
         try
         {
