@@ -4,8 +4,6 @@ import java.util.Map;
 
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.ImmutableMap;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
@@ -31,7 +29,7 @@ public class SystemPropertiesTest
         final SystemProperties props = new SystemProperties();
         assertNull( props.getEnv( "MY_ENV" ) );
 
-        final Map<String, String> env = ImmutableMap.of( "MY_ENV", "myvalue" );
+        final Map<String, String> env = Map.of( "MY_ENV", "myvalue" );
         props.putAllEnv( env );
 
         assertEquals( "myvalue", props.getEnv( "MY_ENV" ) );
